--- a/Translation/general.json
+++ b/Translation/general.json
@@ -43,7 +43,7 @@
         "kr":"",
         "ru":"",
         "tr":"",
-        "de":"",
+        "de":"Spieler [{0}] hat dir eine Gruppenanfrage geschickt",
         "jp":"",
         "pt":"",
         "vi":"Người chơi [{0}] gửi cho bạn một yêu cầu tham gia nhóm",
@@ -169,7 +169,7 @@
         "kr":"",
         "ru":"Магипоинт",
         "tr":"",
-        "de":"Schwarze Magie",
+        "de":"Magiepunkte",
         "jp":"",
         "pt":"",
         "vi":"Điểm kỹ năng",
@@ -187,7 +187,7 @@
         "kr":"",
         "ru":"",
         "tr":"",
-        "de":"",
+        "de":"Neu",
         "jp":"",
         "pt":"",
         "vi":"",
@@ -205,7 +205,7 @@
         "kr":"",
         "ru":"Получить вознаграждение",
         "tr":"",
-        "de":"Die Belohnung erhalten",
+        "de":"Belohnung erhalten",
         "jp":"",
         "pt":"",
         "vi":"Nhận Thưởng",
@@ -223,7 +223,7 @@
         "kr":"",
         "ru":"Награда за задание",
         "tr":"",
-        "de":"Quest-Belohnung",
+        "de":"Quest Belohnung",
         "jp":"",
         "pt":"",
         "vi":"Phần thưởng",
@@ -349,7 +349,7 @@
         "kr":"",
         "ru":"Ур.",
         "tr":"",
-        "de":"Lv.",
+        "de":"Lvl.",
         "jp":"",
         "pt":"",
         "vi":"Lv.",
@@ -367,7 +367,7 @@
         "kr":"",
         "ru":"Привязывается при экипировке",
         "tr":"",
-        "de":"Link falls ausgestattet",
+        "de":"Gebunden wenn ausgerüstet",
         "jp":"",
         "pt":"",
         "vi":"Khóa khi Trang bị",
@@ -385,7 +385,7 @@
         "kr":"",
         "ru":"Привязывается при поднятии",
         "tr":"",
-        "de":"Link falls sammeln",
+        "de":"Gebunden wenn eingesammelt",
         "jp":"",
         "pt":"",
         "vi":"Khóa khi nhặt lên",
@@ -403,7 +403,7 @@
         "kr":"",
         "ru":"Привязан",
         "tr":"",
-        "de":"Link",
+        "de":"Gebunden",
         "jp":"",
         "pt":"",
         "vi":"Khóa",
@@ -421,7 +421,7 @@
         "kr":"",
         "ru":"Мирный",
         "tr":"",
-        "de":"Frieden",
+        "de":"Friede",
         "jp":"",
         "pt":"",
         "vi":"Hòa",
@@ -439,7 +439,7 @@
         "kr":"",
         "ru":"ПВП",
         "tr":"",
-        "de":"SK",
+        "de":"PVP",
         "jp":"",
         "pt":"",
         "vi":"PK",
@@ -457,7 +457,7 @@
         "kr":"",
         "ru":"Продать {0}",
         "tr":"",
-        "de":"Verkaufen Sie {0}",
+        "de":"Verkaufe {0}",
         "jp":"",
         "pt":"",
         "vi":"Bán {0}",
@@ -475,7 +475,7 @@
         "kr":"",
         "ru":"Поддтверждаете продажу {0} за {1} золота?",
         "tr":"",
-        "de":"Bestätigen Sie den Verkauf von {0}, um {1} Gold zu erhalten ?",
+        "de":"Bestätige Verkauf von {0}, um {1} Gold zu erhalten ?",
         "jp":"",
         "pt":"",
         "vi":"Bạn có muốn bán {0} để nhận {1} vàng?",
@@ -511,7 +511,7 @@
         "kr":"",
         "ru":"",
         "tr":"",
-        "de":"",
+        "de":"Annehmen",
         "jp":"",
         "pt":"",
         "vi":"Chấp nhận",
@@ -529,7 +529,7 @@
         "kr":"",
         "ru":"",
         "tr":"",
-        "de":"",
+        "de":"Abbrechen",
         "jp":"",
         "pt":"",
         "vi":"Hủy",
