--- a/Translation/event.json
+++ b/Translation/event.json
@@ -7,7 +7,7 @@
         "kr":"",
         "ru":"",
         "tr":"",
-        "de":"Eingeben",
+        "de":"Betreten",
         "jp":"",
         "pt":"",
         "vi":"Vào",
@@ -43,7 +43,7 @@
         "kr":"",
         "ru":"",
         "tr":"",
-        "de":"Zeitpläne",
+        "de":"Keine Zeit",
         "jp":"",
         "pt":"",
         "vi":"Không Hoạt Động",
@@ -97,7 +97,7 @@
         "kr":"",
         "ru":"",
         "tr":"",
-        "de":"Schnellere Lava Kern-Bildwiederholrate",
+        "de":"Schnellere Lava Kern-Erneuerungsrate",
         "jp":"",
         "pt":"",
         "vi":"Tốc độ tái tạo Lõi Dung nham nhanh hơn",
@@ -115,7 +115,7 @@
         "kr":"19:00-20:00 03:00-04:00 (GMT+9)",
         "ru":"13:00-14:00 21:00-22:00 (GMT+3)",
         "tr":"13:00-14:00 21:00-22:00 (GMT+3)",
-        "de":"Zeitpläne: 11:00-12:00 19:00-20:00 (GMT+1)",
+        "de":"Zeiten: 11:00-12:00 19:00-20:00 (GMT+1)",
         "jp":"19:00-20:00 03:00-04:00 (GMT+9)",
         "pt":"10:00-11:00 18:00-19:00 (GMT+0)",
         "vi":"Thời Gian: 17:00-18:00 01:00-02:00 (GMT+7)",
