--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -7,7 +7,7 @@
         "kr":"",
         "ru":"Вы говорите с {0}",
         "tr":"",
-        "de":"Sagen Sie {0}",
+        "de":"Du sagst zu {0}",
         "jp":"",
         "pt":"",
         "vi":"Bạn nói với {0}",
@@ -25,7 +25,7 @@
         "kr":"",
         "ru":"{0} говорит",
         "tr":"",
-        "de":"{0} sagt Ihnen",
+        "de":"{0} sagt dir",
         "jp":"",
         "pt":"",
         "vi":"{0} nói",
@@ -43,7 +43,7 @@
         "kr":"",
         "ru":"Локальный",
         "tr":"",
-        "de":"Lokale",
+        "de":"Lokal",
         "jp":"",
         "pt":"",
         "vi":"Khu",
@@ -169,7 +169,7 @@
         "kr":"",
         "ru":"",
         "tr":"",
-        "de":"",
+        "de":"Senden",
         "jp":"",
         "pt":"",
         "vi":"Gửi",
@@ -187,7 +187,7 @@
         "kr":"",
         "ru":"Жизни",
         "tr":"",
-        "de":"TP",
+        "de":"HP",
         "jp":"",
         "pt":"",
         "vi":"Máu",
@@ -241,7 +241,7 @@
         "kr":"",
         "ru":"Скорость",
         "tr":"",
-        "de":"GWK",
+        "de":"GESCHW",
         "jp":"",
         "pt":"",
         "vi":"Tốc độ",
