--- a/Translation/item.json
+++ b/Translation/item.json
@@ -1332,14 +1332,14 @@
         "id":"Helm Dabura"
     },
     "item.600.name":{
-        "en":"Roher Ring",
+        "en":"Crude Ring",
         "fr":"Anneau brut",
         "es":"",
         "ch":"",
         "kr":"",
         "ru":"Грубое Кольцо",
         "tr":"",
-        "de":"",
+        "de":"Roher Ring",
         "jp":"",
         "pt":"",
         "vi":"Nhẫn Crude",
