--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -3,7 +3,7 @@
         "en":"You say to {0}",
         "fr":"Vous dites à {0}",
         "es":"Estás diciendo a{0}",
-        "ch":"",
+        "ch":"你對{0}說",
         "kr":"",
         "ru":"Вы говорите с {0}",
         "tr":"",
@@ -21,7 +21,7 @@
         "en":"{0} says",
         "fr":"{0} vous dit",
         "es":"{0} te dice",
-        "ch":"",
+        "ch":"{0}說",
         "kr":"",
         "ru":"{0} говорит",
         "tr":"",
@@ -39,7 +39,7 @@
         "en":"Local",
         "fr":"Local",
         "es":"Local",
-        "ch":"",
+        "ch":"本地",
         "kr":"",
         "ru":"Локальный",
         "tr":"",
@@ -57,7 +57,7 @@
         "en":"World",
         "fr":"Monde",
         "es":"Mundo",
-        "ch":"",
+        "ch":"世界",
         "kr":"",
         "ru":"Мировой",
         "tr":"",
@@ -75,7 +75,7 @@
         "en":"Notice",
         "fr":"Annonce",
         "es":"Anuncio",
-        "ch":"",
+        "ch":"通知",
         "kr":"",
         "ru":"Уведомления",
         "tr":"",
@@ -93,7 +93,7 @@
         "en":"PM",
         "fr":"MP",
         "es":"MP",
-        "ch":"",
+        "ch":"私聊",
         "kr":"",
         "ru":"Личный",
         "tr":"",
@@ -111,7 +111,7 @@
         "en":"Guild",
         "fr":"Guilde",
         "es":"Gremio",
-        "ch":"",
+        "ch":"公會",
         "kr":"",
         "ru":"Гильдия",
         "tr":"",
@@ -129,7 +129,7 @@
         "en":"Group",
         "fr":"Groupe",
         "es":"Grupo",
-        "ch":"",
+        "ch":"隊伍",
         "kr":"",
         "ru":"Группа",
         "tr":"",
@@ -147,7 +147,7 @@
         "en":"System",
         "fr":"Système",
         "es":"Sistema",
-        "ch":"",
+        "ch":"系統",
         "kr":"",
         "ru":"Система",
         "tr":"",
@@ -164,7 +164,7 @@
     "UI.chat.btn.send":{
         "en":"Send",
         "fr":"Envoyer",
-        "es":"",
+        "es":"發送",
         "ch":"",
         "kr":"",
         "ru":"",
@@ -201,7 +201,7 @@
         "en":"MP",
         "fr":"PM",
         "es":"MP",
-        "ch":"魔法值",
+        "ch":"魔力值",
         "kr":"",
         "ru":"Мана",
         "tr":"",
@@ -237,7 +237,7 @@
         "en":"SPD",
         "fr":"VIT",
         "es":"SPD",
-        "ch":"",
+        "ch":"移動速度",
         "kr":"",
         "ru":"Скорость",
         "tr":"",
@@ -255,7 +255,7 @@
         "en":"Attack",
         "fr":"Attaque",
         "es":"Ataque",
-        "ch":"攻击",
+        "ch":"攻擊力",
         "kr":"공격",
         "ru":"Атака",
         "tr":"",
@@ -273,7 +273,7 @@
         "en":"ATK",
         "fr":"ATQ",
         "es":"ATQ",
-        "ch":"攻击",
+        "ch":"攻擊",
         "kr":"공격",
         "ru":"АТК",
         "tr":"",
@@ -291,7 +291,7 @@
         "en":"Defence",
         "fr":"Défense",
         "es":"Defensa",
-        "ch":"防御",
+        "ch":"防禦力",
         "kr":"방어",
         "ru":"Защита",
         "tr":"",
@@ -309,7 +309,7 @@
         "en":"DEF",
         "fr":"DEF",
         "es":"DEF",
-        "ch":"防御",
+        "ch":"防禦",
         "kr":"",
         "ru":"ЗЩТ",
         "tr":"",
@@ -327,7 +327,7 @@
         "en":"Enhanced Damage",
         "fr":"Dégâts Améliorés",
         "es":"Daño mejorado",
-        "ch":"伤害增强",
+        "ch":"傷害增强",
         "kr":"강화 된 손상",
         "ru":"Повышенный Урон",
         "tr":"",
@@ -345,7 +345,7 @@
         "en":"ENHC DMG",
         "fr":"DGTS AM",
         "es":"",
-        "ch":"伤害增强",
+        "ch":"傷害增强",
         "kr":"",
         "ru":"ПВШ УРН",
         "tr":"",
@@ -363,7 +363,7 @@
         "en":"Damage Reduction",
         "fr":"Réduction de dégâts",
         "es":"Reducción del daño",
-        "ch":"伤害减免",
+        "ch":"傷害減免",
         "kr":"피해 감소",
         "ru":"Снижение урона",
         "tr":"",
@@ -381,7 +381,7 @@
         "en":"DMG RD",
         "fr":"RD DGTS",
         "es":"",
-        "ch":"伤害减免",
+        "ch":"傷害減免",
         "kr":"",
         "ru":"СНЖ УРН",
         "tr":"",
@@ -399,7 +399,7 @@
         "en":"Attack Speed",
         "fr":"Vitesse d'attaque",
         "es":"Velocidad de ataque",
-        "ch":"攻击速度",
+        "ch":"攻擊速度",
         "kr":"공격 속도",
         "ru":"Скорость атаки",
         "tr":"",
@@ -417,7 +417,7 @@
         "en":"ATK SPD",
         "fr":"VIT ATK",
         "es":"ATQ VEL",
-        "ch":"攻击速度",
+        "ch":"攻擊速度",
         "kr":"공격 속도",
         "ru":"СКР АТК",
         "tr":"",
@@ -543,7 +543,7 @@
         "en":"Evasion",
         "fr":"Esquive",
         "es":"Evasión",
-        "ch":"闪避",
+        "ch":"閃避",
         "kr":"회피",
         "ru":"",
         "tr":"Уклонение",
@@ -561,7 +561,7 @@
         "en":"EVA",
         "fr":"ESQ",
         "es":"EVA",
-        "ch":"闪避",
+        "ch":"閃避",
         "kr":"",
         "ru":"УКЛ",
         "tr":"",
@@ -579,7 +579,7 @@
         "en":"Skill Evasion",
         "fr":"Esquive Compétence",
         "es":"Evasión de habilidades",
-        "ch":"技能闪避",
+        "ch":"技能閃避",
         "kr":"스킬 회피",
         "tr":"Уклониене от навыка",
         "ru":"",
@@ -597,7 +597,7 @@
         "en":"Skill EVA",
         "fr":"ESQ Comp",
         "es":"",
-        "ch":"技能闪避",
+        "ch":"技能閃避",
         "kr":"",
         "ru":"УКЛ НВК",
         "tr":"",
@@ -615,7 +615,7 @@
         "en":"Crit Accuracy",
         "fr":"Précision Critique",
         "es":"Precisión crítica",
-        "ch":"暴击命中",
+        "ch":"暴擊命中",
         "kr":"치명타 정확도",
         "ru":"Точность крита",
         "tr":"",
@@ -633,7 +633,7 @@
         "en":"CRIT ACC",
         "fr":"PRE CRIT",
         "es":"",
-        "ch":"暴击命中",
+        "ch":"暴擊命中",
         "kr":"",
         "ru":"ТЧН КРИТ",
         "tr":"",
@@ -651,7 +651,7 @@
         "en":"Skill Crit Accuracy",
         "fr":"Précision Compétence Critique",
         "es":"Precisión crítica de habilidad",
-        "ch":"技能暴击命中",
+        "ch":"技能暴擊命中",
         "kr":"스킬 치명타 정확도",
         "ru":"Точность Крита Навыка",
         "tr":"",
@@ -669,7 +669,7 @@
         "en":"Skill CRIT ACC",
         "fr":"PRE Comp CRIT",
         "es":"",
-        "ch":"技能暴击命中",
+        "ch":"技能暴擊命中",
         "kr":"",
         "ru":"ТЧН КРИТ НВК",
         "tr":"",
@@ -687,7 +687,7 @@
         "en":"Crit Evasion",
         "fr":"Esquive Critique",
         "es":"Evasión de críticos",
-        "ch":"暴击闪避",
+        "ch":"暴擊閃避",
         "kr":"치명타 회피",
         "ru":"Уклонение от крита",
         "tr":"",
@@ -705,7 +705,7 @@
         "en":"CRIT EVA",
         "fr":"ESQ CRIT",
         "es":"",
-        "ch":"暴击闪避",
+        "ch":"暴擊閃避",
         "kr":"",
         "ru":"КРИТ УКЛ",
         "tr":"",
@@ -723,7 +723,7 @@
         "en":"Skill Crit Evasion",
         "fr":"Esquive Compétence Critique",
         "es":"Evasión de críticos de habilidad",
-        "ch":"技能暴击闪避",
+        "ch":"技能暴擊閃避",
         "kr":"스킬 치명타 회피",
         "ru":"Уклонение от Крита Навыка",
         "tr":"",
@@ -741,7 +741,7 @@
         "en":"Skill CRIT EVA",
         "fr":"ESQ Comp CRIT",
         "es":"",
-        "ch":"技能暴击闪避",
+        "ch":"技能暴擊閃避",
         "kr":"",
         "ru":"УКЛ КРИТ НВК",
         "tr":"",
@@ -759,7 +759,7 @@
         "en":"Crit Enhanced",
         "fr":"Amélioration Critique",
         "es":"Crit mejorado",
-        "ch":"暴击增强",
+        "ch":"暴擊增强",
         "kr":"!치명타 향상",
         "ru":"Усиление Крита",
         "tr":"",
@@ -777,7 +777,7 @@
         "en":"CRIT ENCH",
         "fr":"AM CRIT",
         "es":"",
-        "ch":"暴击增强",
+        "ch":"暴擊增强",
         "kr":"",
         "ru":"УСИЛ КРИТ",
         "tr":"",
@@ -795,7 +795,7 @@
         "en":"Skill Crit Enhanced",
         "fr":"Compétence Critique Ameliorée",
         "es":"Habilidad crítica mejorada",
-        "ch":"技能暴击增强",
+        "ch":"技能暴擊增强",
         "kr":"스킬 크리티컬 강화",
         "ru":"Повышение критического уровня навыков",
         "tr":"",
@@ -813,7 +813,7 @@
         "en":"Skill CRIT ENCH",
         "fr":"AM Comp CRIT",
         "es":"",
-        "ch":"技能暴击增强",
+        "ch":"技能暴擊增强",
         "kr":"",
         "ru":"ПОВЫШ КРИТ НВК",
         "tr":"",
@@ -831,7 +831,7 @@
         "en":"Crit Reduction",
         "fr":"Reduction Critique",
         "es":"Reducción de críticos",
-        "ch":"暴击减免",
+        "ch":"暴擊減免",
         "kr":"치명타 감소",
         "ru":"Снижение критического урона",
         "tr":"",
@@ -849,7 +849,7 @@
         "en":"CRIT RD",
         "fr":"RD CRIT",
         "es":"",
-        "ch":"暴击减免",
+        "ch":"暴擊減免",
         "kr":"",
         "ru":"СНИЖ КРИТ",
         "tr":"",
@@ -867,7 +867,7 @@
         "en":"Skill Crit Reduction",
         "fr":"Reduction Compétence Critique",
         "es":"Reducción de críticos de habilidad",
-        "ch":"技能暴击减免",
+        "ch":"技能暴擊減免",
         "kr":"스킬 크리티컬 감소",
         "ru":"Снижение критического урона",
         "tr":"",
@@ -885,7 +885,7 @@
         "en":"Skill CRIT RD",
         "fr":"RD Comp CRIT",
         "es":"",
-        "ch":"技能暴击减免",
+        "ch":"技能暴擊減免",
         "kr":"",
         "ru":"НВК КРИТ СНИЖ",
         "tr":"",
@@ -903,7 +903,7 @@
         "en":"Holy Attack",
         "fr":"Attaque sacrée",
         "es":"Ataque sagrado",
-        "ch":"神圣攻击",
+        "ch":"神聖攻擊",
         "kr":"신성한 공격",
         "ru":"Священная атака",
         "tr":"",
@@ -921,7 +921,7 @@
         "en":"Holy ATK",
         "fr":"ATK Sacrée",
         "es":"",
-        "ch":"神圣攻击",
+        "ch":"神聖攻擊",
         "kr":"",
         "ru":"СВЯЩ АТК",
         "tr":"",
@@ -939,7 +939,7 @@
         "en":"Luck",
         "fr":"Chance",
         "es":"Suerte",
-        "ch":"幸运值",
+        "ch":"幸運值",
         "kr":"운",
         "ru":"Удача",
         "tr":"",
@@ -957,7 +957,7 @@
         "en":"Luck",
         "fr":"Chance",
         "es":"Suerte",
-        "ch":"幸运值",
+        "ch":"幸運值",
         "kr":"",
         "ru":"УДАЧА",
         "tr":"",
@@ -975,7 +975,7 @@
         "en":"Quest",
         "fr":"Quêtes",
         "es":"",
-        "ch":"",
+        "ch":"任務",
         "kr":"",
         "ru":"Квест",
         "tr":"",
@@ -993,7 +993,7 @@
         "en":"Growth",
         "fr":"Croissance",
         "es":"",
-        "ch":"",
+        "ch":"任務進度",
         "kr":"",
         "ru":"Увеличение",
         "tr":"",
@@ -1010,7 +1010,7 @@
     "UI.windows.quest-list.tab.available":{
         "en":"Available",
         "fr":"Disponible",
-        "es":"",
+        "es":"可接取",
         "ch":"",
         "kr":"",
         "ru":"Доступно",
@@ -1029,7 +1029,7 @@
         "en":"Quest Objective",
         "fr":"Objectif",
         "es":"",
-        "ch":"",
+        "ch":"任務目標",
         "kr":"",
         "ru":"Задача Квеста",
         "tr":"",
@@ -1046,7 +1046,7 @@
     "UI.windows.quest-list.reward":{
         "en":"Quest Reward",
         "fr":"Récompense",
-        "es":"",
+        "es":"任務獎勵",
         "ch":"",
         "kr":"",
         "ru":"Награда за задание",
@@ -1065,7 +1065,7 @@
         "en":"Quest Description",
         "fr":"Description",
         "es":"",
-        "ch":"",
+        "ch":"任務描述",
         "kr":"",
         "ru":"Поисание Квеста",
         "tr":"",
@@ -1083,7 +1083,7 @@
         "en":"DONE",
         "fr":"TERMINER",
         "es":"",
-        "ch":"",
+        "ch":"已完成",
         "kr":"",
         "ru":"Выполнено",
         "tr":"",
@@ -1101,7 +1101,7 @@
         "en":"Main Quest",
         "fr":"Quête Principale",
         "es":"",
-        "ch":"",
+        "ch":"主綫任務",
         "kr":"",
         "ru":"Главный Квест",
         "tr":"",
@@ -1119,7 +1119,7 @@
         "en":"Secondary Quest",
         "fr":"Quête Secondaire",
         "es":"",
-        "ch":"",
+        "ch":"支綫任務",
         "kr":"",
         "ru":"Второстепенный Квест",
         "tr":"",
@@ -1137,7 +1137,7 @@
         "en":"Talent Quest",
         "fr":"Quête de Talent",
         "es":"",
-        "ch":"",
+        "ch":"天賦任務",
         "kr":"",
         "ru":"Квест Способности",
         "tr":"",
@@ -1155,7 +1155,7 @@
         "en":"Daily Quest",
         "fr":"Quête journ.",
         "es":"",
-        "ch":"",
+        "ch":"每日任務",
         "kr":"",
         "ru":"Ежедневный Квест",
         "tr":"",
@@ -1173,7 +1173,7 @@
         "en":"Guild Quest",
         "fr":"Quête de Guilde",
         "es":"",
-        "ch":"",
+        "ch":"公會任務",
         "kr":"",
         "ru":"Квест Гильдии",
         "tr":"",
@@ -1191,7 +1191,7 @@
         "en":"Character",
         "fr":"Personnage",
         "es":"",
-        "ch":"",
+        "ch":"人物",
         "kr":"",
         "ru":"Персонаж",
         "tr":"",
@@ -1209,7 +1209,7 @@
         "en":"Gear",
         "fr":"Equipement",
         "es":"",
-        "ch":"",
+        "ch":"裝備",
         "kr":"",
         "ru":"Экипировка",
         "tr":"",
@@ -1227,7 +1227,7 @@
         "en":"Blessing",
         "fr":"Bénédiction",
         "es":"",
-        "ch":"",
+        "ch":"祝福",
         "kr":"",
         "ru":"Благословение",
         "tr":"",
@@ -1245,7 +1245,7 @@
         "en":"Valor",
         "fr":"Valeur",
         "es":"",
-        "ch":"",
+        "ch":"戰魂",
         "kr":"",
         "ru":"Доблесть",
         "tr":"",
@@ -1263,7 +1263,7 @@
         "en":"Element",
         "fr":"Élément",
         "es":"",
-        "ch":"",
+        "ch":"元素",
         "kr":"",
         "ru":"Элемент",
         "tr":"",
@@ -1281,7 +1281,7 @@
         "en":"Bag",
         "fr":"Sac",
         "es":"",
-        "ch":"",
+        "ch":"背包",
         "kr":"",
         "ru":"Инвентарь",
         "tr":"",
@@ -1299,7 +1299,7 @@
         "en":"All",
         "fr":"Tout",
         "es":"",
-        "ch":"",
+        "ch":"全部",
         "kr":"",
         "ru":"Все",
         "tr":"",
@@ -1317,7 +1317,7 @@
         "en":"Gear",
         "fr":"Equip.",
         "es":"",
-        "ch":"",
+        "ch":"裝備",
         "kr":"",
         "ru":"Экипировка",
         "tr":"",
@@ -1335,7 +1335,7 @@
         "en":"Potion",
         "fr":"Potion",
         "es":"",
-        "ch":"",
+        "ch":"藥水",
         "kr":"",
         "ru":"Зелья",
         "tr":"",
@@ -1353,7 +1353,7 @@
         "en":"Matl.",
         "fr":"Mater.",
         "es":"",
-        "ch":"",
+        "ch":"材料",
         "kr":"",
         "ru":"Материалы",
         "tr":"",
@@ -1371,7 +1371,7 @@
         "en":"Spirit",
         "fr":"Esprit",
         "es":"",
-        "ch":"",
+        "ch":"精靈",
         "kr":"",
         "ru":"Дух",
         "tr":"",
@@ -1389,7 +1389,7 @@
         "en":"Quest",
         "fr":"Quête",
         "es":"",
-        "ch":"",
+        "ch":"任務物品",
         "kr":"",
         "ru":"Квест",
         "tr":"",
@@ -1407,7 +1407,7 @@
         "en":"Misc",
         "fr":"Divers",
         "es":"",
-        "ch":"",
+        "ch":"雜物",
         "kr":"",
         "ru":"Разное",
         "tr":"",
@@ -1425,7 +1425,7 @@
         "en":"Bag Capacity",
         "fr":"Capacité",
         "es":"",
-        "ch":"",
+        "ch":"背包容量",
         "kr":"",
         "ru":"Вместимость Инвентаря",
         "tr":"",
@@ -1443,7 +1443,7 @@
         "en":"Sort",
         "fr":"Tri",
         "es":"",
-        "ch":"",
+        "ch":"種類",
         "kr":"",
         "ru":"Сортировать",
         "tr":"",
@@ -1461,7 +1461,7 @@
         "en":"Split",
         "fr":"Sépar.",
         "es":"",
-        "ch":"",
+        "ch":"拆分",
         "kr":"",
         "ru":"Разделить",
         "tr":"",
@@ -1479,7 +1479,7 @@
         "en":"Fort.",
         "fr":"Fort.",
         "es":"",
-        "ch":"",
+        "ch":"製造",
         "kr":"",
         "ru":"Укрепление",
         "tr":"",
@@ -1497,7 +1497,7 @@
         "en":"Bulk Sale",
         "fr":"Vente Lot",
         "es":"",
-        "ch":"",
+        "ch":"批量出售",
         "kr":"",
         "ru":"Оптовая Продажа",
         "tr":"",
@@ -1515,7 +1515,7 @@
         "en":"Vend",
         "fr":"Vendre",
         "es":"",
-        "ch":"",
+        "ch":"出售",
         "kr":"",
         "ru":"Продажа",
         "tr":"",
@@ -1533,7 +1533,7 @@
         "en":"Charge",
         "fr":"Rech.",
         "es":"",
-        "ch":"",
+        "ch":"購買魔能",
         "kr":"",
         "ru":"Донат",
         "tr":"",
@@ -1551,7 +1551,7 @@
         "en":"[Lock]",
         "fr":"[Verr]",
         "es":"",
-        "ch":"",
+        "ch":"[鎖定]",
         "kr":"",
         "ru":"[Заперто]",
         "tr":"",
@@ -1569,7 +1569,7 @@
         "en":"Stash",
         "fr":"Réserve",
         "es":"",
-        "ch":"",
+        "ch":"隱藏",
         "kr":"",
         "ru":"",
         "tr":"",
