--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -1335,7 +1335,7 @@
         "en":"Potion",
         "fr":"Potion",
         "es":"",
-        "ch":"藥水",
+        "ch":"藥劑",
         "kr":"",
         "ru":"Зелья",
         "tr":"",
@@ -1443,7 +1443,7 @@
         "en":"Sort",
         "fr":"Tri",
         "es":"",
-        "ch":"種類",
+        "ch":"整理",
         "kr":"",
         "ru":"Сортировать",
         "tr":"",
@@ -1479,7 +1479,7 @@
         "en":"Fort.",
         "fr":"Fort.",
         "es":"",
-        "ch":"製造",
+        "ch":"强化",
         "kr":"",
         "ru":"Укрепление",
         "tr":"",
@@ -1587,7 +1587,7 @@
         "en":"Manual",
         "fr":"Manuel",
         "es":"",
-        "ch":"",
+        "ch":"手動復活",
         "kr":"",
         "ru":"Руководство",
         "tr":"",
@@ -1605,7 +1605,7 @@
         "en":"Gold",
         "fr":"Or",
         "es":"",
-        "ch":"",
+        "ch":"金幣復活",
         "kr":"",
         "ru":"Золото",
         "tr":"",
@@ -1623,7 +1623,7 @@
         "en":"Item",
         "fr":"Objet",
         "es":"",
-        "ch":"",
+        "ch":"道具復活",
         "kr":"",
         "ru":"Предмет",
         "tr":"",
@@ -1641,7 +1641,7 @@
         "en":"Line",
         "fr":"Ligne",
         "es":"",
-        "ch":"",
+        "ch":"綫路",
         "kr":"",
         "ru":"Линия",
         "tr":"",
@@ -1659,7 +1659,7 @@
         "en":"Ln",
         "fr":"Ln",
         "es":"",
-        "ch":"",
+        "ch":"Ln",
         "kr":"Лн",
         "ru":"",
         "tr":"",
@@ -1677,7 +1677,7 @@
         "en":"Craft",
         "fr":"Artisanat",
         "es":"",
-        "ch":"",
+        "ch":"製造",
         "kr":"",
         "ru":"Ремесло",
         "tr":"",
@@ -1695,7 +1695,7 @@
         "en":"Weapon",
         "fr":"Arme",
         "es":"",
-        "ch":"",
+        "ch":"武器",
         "kr":"",
         "ru":"Оружие",
         "tr":"",
@@ -1713,7 +1713,7 @@
         "en":"Armor",
         "fr":"Armure",
         "es":"",
-        "ch":"",
+        "ch":"護甲",
         "kr":"",
         "ru":"Броня",
         "tr":"",
@@ -1731,7 +1731,7 @@
         "en":"Jewelry",
         "fr":"Bijoux",
         "es":"",
-        "ch":"",
+        "ch":"飾品",
         "kr":"",
         "ru":"Бижутерия",
         "tr":"",
@@ -1749,7 +1749,7 @@
         "en":"Potions",
         "fr":"Potions",
         "es":"",
-        "ch":"",
+        "ch":"藥劑",
         "kr":"",
         "ru":"Зелья",
         "tr":"",
@@ -1767,7 +1767,7 @@
         "en":"Mount",
         "fr":"Monture",
         "es":"",
-        "ch":"",
+        "ch":"坐騎",
         "kr":"",
         "ru":"Ездовой",
         "tr":"",
@@ -1785,7 +1785,7 @@
         "en":"Wings",
         "fr":"Ailes",
         "es":"",
-        "ch":"",
+        "ch":"羽翼",
         "kr":"",
         "ru":"Крылья",
         "tr":"",
@@ -1803,7 +1803,7 @@
         "en":"Craft",
         "fr":"Fabrication",
         "es":"",
-        "ch":"",
+        "ch":"製造",
         "kr":"",
         "ru":"Изготовление",
         "tr":"",
@@ -1821,7 +1821,7 @@
         "en":"Mod",
         "fr":"Modification",
         "es":"",
-        "ch":"",
+        "ch":"改造",
         "kr":"",
         "ru":"Модификачия",
         "tr":"",
@@ -1839,7 +1839,7 @@
         "en":"Material Cost",
         "fr":"Matériaux Requis",
         "es":"",
-        "ch":"",
+        "ch":"消耗材料",
         "kr":"",
         "ru":"Требуемые материалы",
         "tr":"",
@@ -1857,7 +1857,7 @@
         "en":"Gold Cost",
         "fr":"Or Requis",
         "es":"",
-        "ch":"",
+        "ch":"消耗金幣",
         "kr":"",
         "ru":"Требуемое Золото",
         "tr":"",
@@ -1875,7 +1875,7 @@
         "en":"Craft EXP",
         "fr":"EXP Fabric.",
         "es":"",
-        "ch":"",
+        "ch":"製造經驗",
         "kr":"",
         "ru":"Уровень Ремесла",
         "tr":"",
@@ -1893,7 +1893,7 @@
         "en":"Start",
         "fr":"Débuter",
         "es":"",
-        "ch":"",
+        "ch":"開始",
         "kr":"",
         "ru":"Старт",
         "tr":"",
@@ -1911,7 +1911,7 @@
         "en":"Stop",
         "fr":"Arreter",
         "es":"",
-        "ch":"",
+        "ch":"停止",
         "kr":"",
         "ru":"Стоп",
         "tr":"",
@@ -1929,7 +1929,7 @@
         "en":"Confirm box",
         "fr":"Confirmation",
         "es":"",
-        "ch":"",
+        "ch":"確認",
         "kr":"",
         "ru":"Подтверждение",
         "tr":"",
@@ -1947,7 +1947,7 @@
         "en":"Accept",
         "fr":"Accepter",
         "es":"",
-        "ch":"",
+        "ch":"接受",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -1965,7 +1965,7 @@
         "en":"Confirm",
         "fr":"Confirmer",
         "es":"",
-        "ch":"",
+        "ch":"確認",
         "kr":"",
         "ru":"Подтвердить",
         "tr":"",
@@ -1983,7 +1983,7 @@
         "en":"Close",
         "fr":"Fermer",
         "es":"",
-        "ch":"",
+        "ch":"關閉",
         "kr":"",
         "ru":"Закрыть",
         "tr":"",
@@ -2001,7 +2001,7 @@
         "en":"Fair",
         "fr":"Marché",
         "es":"",
-        "ch":"",
+        "ch":"集市",
         "kr":"",
         "ru":"Ярмарка",
         "tr":"",
@@ -2019,7 +2019,7 @@
         "en":"Gold Shop",
         "fr":"Boutique",
         "es":"",
-        "ch":"",
+        "ch":"金幣商店",
         "kr":"",
         "ru":"Магазин",
         "tr":"",
@@ -2037,7 +2037,7 @@
         "en":"Consign.",
         "fr":"Ventes",
         "es":"",
-        "ch":"",
+        "ch":"寄售",
         "kr":"",
         "ru":"Отправить",
         "tr":"",
@@ -2055,7 +2055,7 @@
         "en":"Ench.",
         "fr":"Enchères",
         "es":"",
-        "ch":"",
+        "ch":"附魔",
         "kr":"",
         "ru":"Аукцион",
         "tr":"",
@@ -2073,7 +2073,7 @@
         "en":"Skills",
         "fr":"Compétences",
         "es":"",
-        "ch":"",
+        "ch":"技能",
         "kr":"",
         "ru":"Навыки",
         "tr":"",
@@ -2091,7 +2091,7 @@
         "en":"Skill",
         "fr":"Compétence",
         "es":"",
-        "ch":"",
+        "ch":"技能",
         "kr":"",
         "ru":"Навык",
         "tr":"",
@@ -2109,7 +2109,7 @@
         "en":"Talent",
         "fr":"Talent",
         "es":"",
-        "ch":"",
+        "ch":"天賦",
         "kr":"",
         "ru":"Талант",
         "tr":"",
@@ -2127,7 +2127,7 @@
         "en":"Talent's Skills",
         "fr":"Compétences de Talent",
         "es":"",
-        "ch":"",
+        "ch":"天賦技能",
         "kr":"",
         "ru":"Навыки Талантов",
         "tr":"",
@@ -2145,7 +2145,7 @@
         "en":"Configs",
         "fr":"Paramètres",
         "es":"",
-        "ch":"",
+        "ch":"配置",
         "kr":"",
         "ru":"Настройки",
         "tr":"",
@@ -2163,7 +2163,7 @@
         "en":"Events",
         "fr":"Événements",
         "es":"",
-        "ch":"",
+        "ch":"活動",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -2181,7 +2181,7 @@
         "en":"Daily",
         "fr":"Journalier",
         "es":"",
-        "ch":"",
+        "ch":"每日",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -2199,7 +2199,7 @@
         "en":"Weekly",
         "fr":"Hebdomadaire",
         "es":"",
-        "ch":"",
+        "ch":"每周",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -2217,7 +2217,7 @@
         "en":"Other",
         "fr":"Autre",
         "es":"",
-        "ch":"",
+        "ch":"其它",
         "kr":"",
         "ru":"",
         "tr":"",
