--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -993,7 +993,7 @@
         "en":"Growth",
         "fr":"Croissance",
         "es":"",
-        "ch":"任務進度",
+        "ch":"進行中",
         "kr":"",
         "ru":"Увеличение",
         "tr":"",
