--- a/Translation/event.json
+++ b/Translation/event.json
@@ -3,7 +3,7 @@
         "en":"Enter",
         "fr":"Entrer",
         "es":"Entra en",
-        "ch":"",
+        "ch":"進入",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -21,7 +21,7 @@
         "en":"Leave",
         "fr":"Sortir",
         "es":"Deje",
-        "ch":"",
+        "ch":"離開",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -39,7 +39,7 @@
         "en":"Not Time",
         "fr":"Horaires",
         "es":"Horarios",
-        "ch":"",
+        "ch":"時間不符",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -57,7 +57,7 @@
         "en":"Intro.",
         "fr":"Intro.",
         "es":"Intro.",
-        "ch":"",
+        "ch":"介紹",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -75,7 +75,7 @@
         "en":"Lava Core X 10",
         "fr":"Coeur de lave X 10",
         "es":"Lava Core X 10",
-        "ch":"",
+        "ch":"熔岩核心 X 10",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -93,7 +93,7 @@
         "en":"Faster Lava Core refresh rate",
         "fr":"Taux de rafraichissement du Coeur de Lave plus élevé",
         "es":"Mayor velocidad de refresco del Core de Lava",
-        "ch":"",
+        "ch":"加快熔岩核心刷新速度",
         "kr":"",
         "ru":"",
         "tr":"",
