--- a/Translation/general.json
+++ b/Translation/general.json
@@ -3,7 +3,7 @@
         "en":"Guild",
         "fr":"Guilde",
         "es":"Gremio",
-        "ch":"",
+        "ch":"公會",
         "kr":"",
         "ru":"Гильдия",
         "tr":"",
@@ -21,7 +21,7 @@
         "en":"Group",
         "fr":"Groupe",
         "es":"Grupo",
-        "ch":"",
+        "ch":"隊伍",
         "kr":"",
         "ru":"Группа",
         "tr":"",
@@ -39,7 +39,7 @@
         "en":"Player [{0}] has sent you a group request",
         "fr":"Le joueur [{0}] vous à envoyer une demande de groupe",
         "es":"",
-        "ch":"",
+        "ch":"玩家 [{0}] 對你發出了一個組隊邀請",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -57,7 +57,7 @@
         "en":"Gold",
         "fr":"Or",
         "es":"Oro",
-        "ch":"",
+        "ch":"金幣",
         "kr":"",
         "ru":"Золото",
         "tr":"",
@@ -75,7 +75,7 @@
         "en":"Token",
         "fr":"Jeton",
         "es":"",
-        "ch":"",
+        "ch":"魔能",
         "kr":"",
         "ru":"Жетон",
         "tr":"",
@@ -93,7 +93,7 @@
         "en":"Tokens",
         "fr":"Jetons",
         "es":"",
-        "ch":"",
+        "ch":"魔能",
         "kr":"",
         "ru":"Жетоны",
         "tr":"",
@@ -111,7 +111,7 @@
         "en":"Coupon",
         "fr":"Coupon",
         "es":"Cupón",
-        "ch":"",
+        "ch":"代金券",
         "kr":"",
         "ru":"Купон",
         "tr":"",
@@ -129,7 +129,7 @@
         "en":"Coupons",
         "fr":"Coupons",
         "es":"Cupones",
-        "ch":"",
+        "ch":"代金券",
         "kr":"",
         "ru":"Купоны",
         "tr":"",
@@ -147,7 +147,7 @@
         "en":"Exp",
         "fr":"Exp",
         "es":"Exp",
-        "ch":"",
+        "ch":"經驗",
         "kr":"",
         "ru":"Опыт",
         "tr":"",
@@ -165,7 +165,7 @@
         "en":"Magipoint",
         "fr":"Magie noire",
         "es":"Puntos Magicos",
-        "ch":"",
+        "ch":"魔力值",
         "kr":"",
         "ru":"Магипоинт",
         "tr":"",
@@ -183,7 +183,7 @@
         "en":"New",
         "fr":"Nouvelle",
         "es":"",
-        "ch":"",
+        "ch":"新",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -201,7 +201,7 @@
         "en":"Get Reward",
         "fr":"Obtenir la récompense",
         "es":"Obtener la recompensa",
-        "ch":"",
+        "ch":"獲取獎勵",
         "kr":"",
         "ru":"Получить вознаграждение",
         "tr":"",
@@ -219,7 +219,7 @@
         "en":"Quest Reward",
         "fr":"Récompense de quête",
         "es":"Recompensa de misión",
-        "ch":"",
+        "ch":"任務獎勵",
         "kr":"",
         "ru":"Награда за задание",
         "tr":"",
@@ -237,7 +237,7 @@
         "en":"Warrior",
         "fr":"Guerrier",
         "es":"Guerrero",
-        "ch":"",
+        "ch":"戰士",
         "kr":"",
         "ru":"Воин",
         "tr":"",
@@ -255,7 +255,7 @@
         "en":"Ranger",
         "fr":"Archer",
         "es":"Arquero",
-        "ch":"",
+        "ch":"游俠",
         "kr":"",
         "ru":"Лучник",
         "tr":"",
@@ -273,7 +273,7 @@
         "en":"Mage",
         "fr":"Mage",
         "es":"Mago",
-        "ch":"",
+        "ch":"魔法師",
         "kr":"",
         "ru":"Маг",
         "tr":"",
@@ -291,7 +291,7 @@
         "en":"M",
         "fr":"H",
         "es":"H",
-        "ch":"",
+        "ch":"男",
         "kr":"",
         "ru":"M",
         "tr":"",
@@ -309,7 +309,7 @@
         "en":"F",
         "fr":"F",
         "es":"M",
-        "ch":"",
+        "ch":"女",
         "kr":"",
         "ru":"Ж",
         "tr":"",
@@ -327,7 +327,7 @@
         "en":"Level",
         "fr":"Niveau",
         "es":"Nivel",
-        "ch":"",
+        "ch":"等級",
         "kr":"",
         "ru":"Уровень",
         "tr":"",
@@ -345,7 +345,7 @@
         "en":"Lv.",
         "fr":"Nv.",
         "es":"Nv.",
-        "ch":"",
+        "ch":"Lv",
         "kr":"",
         "ru":"Ур.",
         "tr":"",
@@ -363,7 +363,7 @@
         "en":"Bind on Equip",
         "fr":"Lié quand Équipé",
         "es":"Enlazar al Equipar",
-        "ch":"",
+        "ch":"裝備綁定",
         "kr":"",
         "ru":"Привязывается при экипировке",
         "tr":"",
@@ -381,7 +381,7 @@
         "en":"Bind on Pickup",
         "fr":"Lié quand Ramassé",
         "es":"Enlazar al recoger",
-        "ch":"",
+        "ch":"拾取綁定",
         "kr":"",
         "ru":"Привязывается при поднятии",
         "tr":"",
@@ -399,7 +399,7 @@
         "en":"Bound",
         "fr":"Lié",
         "es":"Unido",
-        "ch":"",
+        "ch":"已綁定",
         "kr":"",
         "ru":"Привязан",
         "tr":"",
@@ -417,7 +417,7 @@
         "en":"Peace",
         "fr":"Paix",
         "es":"Paz",
-        "ch":"",
+        "ch":"和平",
         "kr":"",
         "ru":"Мирный",
         "tr":"",
@@ -435,7 +435,7 @@
         "en":"PK",
         "fr":"PVP",
         "es":"PVP",
-        "ch":"",
+        "ch":"PK",
         "kr":"",
         "ru":"ПВП",
         "tr":"",
@@ -453,7 +453,7 @@
         "en":"Sell {0}",
         "fr":"Vendre {0}",
         "es":"Vender {0}",
-        "ch":"",
+        "ch":"出售 {0}",
         "kr":"",
         "ru":"Продать {0}",
         "tr":"",
@@ -471,7 +471,7 @@
         "en":"Confirm sale {0} to get {1} Gold ?",
         "fr":"Confirmer vendre {0} pour obtenir {1} Or ?",
         "es":"¿Confirmar venta {0} para obtener {1} oro?",
-        "ch":"",
+        "ch":"確認出售 {0} 並獲得 {1} 金幣嗎 ?",
         "kr":"",
         "ru":"Поддтверждаете продажу {0} за {1} золота?",
         "tr":"",
@@ -489,7 +489,7 @@
         "en":"Buy",
         "fr":"Acheter",
         "es":"Comprar",
-        "ch":"",
+        "ch":"購買",
         "kr":"",
         "ru":"Купить",
         "tr":"",
@@ -507,7 +507,7 @@
         "en":"Accept",
         "fr":"Accepter",
         "es":"",
-        "ch":"",
+        "ch":"接受",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -525,7 +525,7 @@
         "en":"Cancel",
         "fr":"Annuler",
         "es":"",
-        "ch":"",
+        "ch":"取消",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -543,7 +543,7 @@
         "en":"No cost",
         "fr":"Aucun coût",
         "es":"",
-        "ch":"",
+        "ch":"無消耗",
         "kr":"",
         "ru":"Бесплатно",
         "tr":"",
@@ -561,7 +561,7 @@
         "en":"Yard",
         "fr":"Mètre",
         "es":"",
-        "ch":"",
+        "ch":"米",
         "kr":"",
         "ru":"Ярд",
         "tr":"",
@@ -579,7 +579,7 @@
         "en":"Second",
         "fr":"Seconde",
         "es":"",
-        "ch":"",
+        "ch":"秒",
         "kr":"",
         "ru":"Секунда",
         "tr":"",
@@ -597,7 +597,7 @@
         "en":"Sec",
         "fr":"Sec",
         "es":"",
-        "ch":"",
+        "ch":"秒",
         "kr":"",
         "ru":"Сек",
         "tr":"",
@@ -615,7 +615,7 @@
         "en":"Minute",
         "fr":"Minute",
         "es":"",
-        "ch":"",
+        "ch":"分鐘",
         "kr":"",
         "ru":"Минута",
         "tr":"",
@@ -633,7 +633,7 @@
         "en":"Min",
         "fr":"Min",
         "es":"",
-        "ch":"",
+        "ch":"分",
         "kr":"",
         "ru":"Мин",
         "tr":"",
